[gd_scene load_steps=8 format=2]

[ext_resource path="res://components_lib/table/scripts/table.gd" type="Script" id=1]
[ext_resource path="res://components_lib/table/materials/brown2.tres" type="Material" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 1000, 100 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 100, 1000, 100 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 100, 1000, 100 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 100, 1000, 100 )

[sub_resource type="CubeMesh" id=5]
material = ExtResource( 2 )
size = Vector3( 1000, 30, 1000 )

[node name="Table" type="Spatial"]
script = ExtResource( 1 )
height_leg_mm = 600.0

[node name="leg1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.6, 0, 0, 0, 1, 950, 300, -50 )
redirect_selection = true
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="leg2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.6, 0, 0, 0, 1, 950, 300, -750 )
redirect_selection = true
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="leg3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.6, 0, 0, 0, 1, 50, 300, -50 )
redirect_selection = true
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="leg4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.6, 0, 0, 0, 1, 50, 300, -750 )
redirect_selection = true
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="board" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.8, 500, 600, -400 )

[node name="board" type="MeshInstance" parent="board"]
redirect_selection = true
mesh = SubResource( 5 )
material/0 = ExtResource( 2 )
